[v8r9-pre2]
use DIRAC v6r18-pre14

* var fix
* updated Reco, removed outdated tests
* removing old tests
* fix scripts
* added reco17
* RAWIntegrity: perform the removal by bulk
* fixed paths
* adapting to v6r18
* RAWIntegrity: addFile by bulk
* RSS fixes
* fix
* just updating the reco17 step
* fix finder
* using the right commands list
* fixing RSS unit tests
* LHCbDIRAC can be released in all platform

[v8r9-pre1]
use DIRAC v6r18p1

* gLogger instead of print
* fixing location finder
* add lbvobox110,201 and 27 hosts
* Docker:allow to specify alternative repository to checkout the code when running
* final removal of AnalyseLogFile
* split regression tests
* using ancestor
* minor fixes
* just pylint
* added eventType
* added missing file type
* removed Reco14
* split of prod tests in MC and data, and updated data
* added switched for custom commands and options
* fix runLocal for ancestors
* Deleted spaces
* Removed spaces
* Changed column order
* Moved RMS db to sqlalchemy

[v8r8p3]
use DIRAC v6r17p23

* fix scripts
* RAWIntegrity: perform the removal by bulk

[v8r8p2]
use DIRAC v6r17p22

ˇ* remove the qtweb and use the default browser insteed
* add all platforms to the documentation
* correct the document format
* Move the check on SystemConfig at for loop level
* Fix the RecoStripping template to cope with more than one step
* avoiding spam emails
* fix for stupid formats of output directories
* visibility flag must be not used during the step modification
* Update tests according to the new compression level specification
* Set defaults for compression level in templates

[v8r8p1]
use DIRAC v6r17p21

* Fix extra curry brace in recoOutputVisFlag

[v8r8]
use DIRAC v6r17p21

* adding the Output Files Visibility
* add stepid to the primary key and correct the tests
* add the file types to the tests
* add ; as separator
* allow to change the number of printed LFNs fix check when SEs are specified
* use the filetypeid insetad of the name