@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v8r9-pre3
+  {
+    Modules = LHCbDIRAC:v8r9-pre3, LHCbWebDIRAC:v4r3p5
+    Depends = DIRAC:v6r18-pre14
+    LcgVer = v12r2
+  }
+
   v8r9-pre2
   {
     Modules = LHCbDIRAC:v8r9-pre1, LHCbWebDIRAC:v4r3p4
