@@ -1,12 +1,12 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r9-pre2",
+  "version": "v8r9-pre3",
   "used_projects": {
     "project": [
       [ "Dirac", "v6r18-pre14",
         [ "bin", "python", "lib" ]
       ],
-      [ "LHCbGrid", "v12r1",
+      [ "LHCbGrid", "v12r2",
         [ "bin", "python", "lib" ]
       ]
     ]
